syntax = "proto3";

package temporal_shop.orchestrations.v1;
option go_package = "github.com/temporalio/temporal-shop/api/temporal_shop/orchestrations/v1;orchestrations";
import "temporal_shop/values/v1/message.proto";

message PingRequest {
  string name = 1;
}

message PingResponse {
  string name = 1;
}

message StartShopperRequest {
  string shopper_id = 1;
  string email = 2;
  int64 duration_seconds = 3;
  string inventory_id = 4;
  string cart_id = 5;
}

message AllocateInventoryRequest {
  string inventory_id = 1;
  string email = 2;
}

message SetShoppingCartRequest {
  string cart_id = 1;
  string shopper_id = 2;
  string email = 3;
  map<string, int64> product_ids_to_quantity = 4;
  values.v1.Topic topic = 5;
}
